# hippius-cli

./: .env  .gitignore  Cargo.toml  LICENSE  metadata.scale  readme.md
.github/workflows/: release.yml
debian/: control
src/: main.rs
