[package]
name = "hippius-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
subxt = { version = "0.38", features = ["substrate-compat"] }
sp-core = "34.0.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
